# hudoc

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: development.md  index.md  installation.md  license.md  technical-details.md  troubleshooting.md  usage.md
examples/: commhr.rss  echr.rss  echr_short.xml  greco.rss  grev.rss  grevio.rss  grevio_short.xml  hudoccpt.rss  hudocecri.rss  hudocecrml.rss  hudocesc.rss  hudocexec.rss  hudocfcnm.rss  hudocgreco.rss  hudocgreta.rss  parse.sh
src/hudoc/: __init__.py  cli.py  core.py  models.py  utils.py
src/hudoc/core/: constants.py  downloader.py  parser.py  processor.py
tests/: test_cli.py  test_core.py  test_utils.py
tests/data/: echr_doc.html  echr_rss.xml  grevio_doc.html  grevio_rss.xml
