[tool.poetry]
name = "hudoc"
version = "0.1.0"
description = "CLI tool for downloading ECHR and GREVIO HUDOC documents"
authors = ["evid <95282593+evidlabel@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["hudoc", "echr", "grevio", "rss", "document"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
ruff = "^0.6.8"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"

[tool.poetry.scripts]
hudoc = "hudoc.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-core"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "SIM", "TCH"]
ignore = ["D203", "D213"]  # Allow multi-line docstrings to start on first line

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
