[tool.poetry]
name = "hudoc"
version = "0.1.2"
description = "CLI tool for downloading ECHR and GREVIO HUDOC documents"
authors = ["evid <95282593+evidlabel@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["hudoc", "echr", "grevio", "rss", "document"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pyyaml = "^6.0.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
ruff = "^0.6.8"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"

[tool.poetry.scripts]
hudoc = "hudoc.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-core"
